--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,6 +15,8 @@ jobs:
 
     - name: Setup V8 build environment
       run: |
+        echo "VERSION ${VERSION}"
+        echo "V8_VERSION ${V8_VERSION}"
         brew install coreutils
         scripts/setup.sh -r ${V8_VERSION} ios
 
